# django-composite-form

./: .gitignore  README.rst  buildout.cfg  setup.cfg  setup.py
composite_form/: forms.py
composite_form/tests/: test_forms.py
example/: forms.py  models.py  settings.py
example/tests/: test_1.py  test_forms.py
