[metadata]
name = django-composite-form
version = 0.1.2
home_page = https://github.com/t0ster/django-composite-form
author = Roman Dolgiy
author_email = roman@bravetstudio.com
summary = Helper class to handle form composition

[files]
packages =
    composite_form
extra_files = setup.cfg

resources =

